@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-04T01:26:41Z",
+  "timestamp" : "2025-12-06T01:22:34Z",
   "count_outdated" : 1457,
   "uniques_outdated" : 977,
-  "count" : 1459,
-  "uniques" : 979,
+  "count" : 1460,
+  "uniques" : 980,
   "clones" : [
     {
       "timestamp": "2025-11-24T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-12-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
